--- a/templates/index.html
+++ b/templates/index.html
@@ -102,17 +102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
     <footer>
-        <div class="footer-content">
-            <div class="footer-location">
-                Somewhere on Earth :)
-            </div>
-            <div class="footer-links">
-                <a href="#">About</a>
-                <a href="#">Privacy</a>
-                <a href="#">Terms</a>
-                <a href="#">Settings</a>
-            </div>
-        </div>
+        Your IP: {{ user_ip }}
     </footer>
 </body>
 </html>
