--- a/templates/whois.html
+++ b/templates/whois.html
@@ -185,7 +185,7 @@
             <div class="info-card">
                 <div class="card-header">
                     <i class="fas fa-globe"></i>
-                    <h2>Website Information</h2>
+                    <h2>Domain Information</h2>
                 </div>
               <table class="data-table">
                 <tbody>
