--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ query }}</title>
-    <meta name="description" content="{{ query }} - search results">
+    <title>Atioth – Your Gateway to Internet Services and Beyond!</title>
     <style>
         * {
             margin: 0;
