--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
     <footer>
-        Your IP: {{ user_ip }}
+         <div class="footer-content">
+       <div class="footer-location">
+                Your IP: {{ user_ip }}
+            </div>
+         </div>
     </footer>
 </body>
 </html>
