--- a/templates/whois.html
+++ b/templates/whois.html
@@ -171,7 +171,7 @@
         <form class="search-wrapper" action="/get" method="post">
             <input type="text" name="domain_name" class="search-input"
                    placeholder="Enter domain or IP address" required>
-            <button type="submit" class="search-button">
+            <button type="submit" class="search-button" aria-label="Search">
               <svg class="radar-icon icon-search ep eq" width="20" height="20" aria-hidden="true"><use href="#icon-search"></use></svg>
             </button>
         </form>
