--- a/templates/whois.html
+++ b/templates/whois.html
@@ -149,6 +149,30 @@
             line-height: 1.8;
         }
 
+        a.button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background-color: #007bff;
+    border: 2px solid #007bff;
+    border-radius: 5px;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+a.button:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+}
+
+a.button:active {
+    background-color: #004494;
+    border-color: #004494;
+}
+
         @media (max-width: 768px) {
             .card-header h2 {
                 font-size: 1.25rem;
@@ -181,28 +205,27 @@
                 <i class="fas fa-exclamation-triangle"></i> {{ error }}
             </div>
         {% else %}
-
-        {% if meta_info %}
-            <h1>Domain Insights</h1>
             <div class="info-card">
                 <div class="card-header">
-                    <i class="fas fa-globe"></i>
-                    <h2>{{ domain_name }}</h2>
+                      <h1>{{ domain_name }}</h1>
                 </div>
-                    <strong>Title</strong>
+            {% if meta_info %}
+                    <strong>What its about?</strong>
                     <p>{{ meta_info.title }}</p>
-                    <strong>Description</strong>
+                    <strong>In their own words</strong>
                     <p>{{ meta_info.meta_description }}</p>
                     {% if meta_info.meta_keywords %}
                         <p>{{ meta_info.meta_keywords }}</p>
                     {% endif %}
+                  {% endif %}
+            <a href="http://{{ domain_name }}" rel="nofollow" class="button">Visit {{ domain_name }}</a>
             </div>
-        {% endif %}
+
 
             <div class="info-card">
                 <div class="card-header">
                     <i class="fas fa-globe"></i>
-                    <h3>Whois</h3>
+                    <h3 id="whois">Whois</h3>
                 </div>
                 <table class="data-table">
                     {% for key, value in domain_info.items() %}
