--- a/templates/whois.html
+++ b/templates/whois.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/static/favicon.png">
 
-    <title>{{ domain_name }} - Comprehensive Domain Insights</title>
+    <title>{{ domain_name }} - {{ meta_info.title }} - Domain Insights</title>
     <meta name="description" content="Detailed WHOIS information and network insights for {{ domain_name }}. Discover domain registration details, IP address, DNS records, and website metadata.">
     <meta name="keywords" content="WHOIS, {{ domain_name }}, domain lookup, IP information, domain registration, DNS records, network tools">
 
@@ -215,7 +215,7 @@
                         <p>{{ meta_info.meta_keywords }}</p>
                     {% endif %}
                   {% endif %}
-            <a href="http://{{ domain_name }}" target="_blank" rel="nofollow" class="button">Visit {{ domain_name }}</a>
+            <a href="https://{{ domain_name }}" target="_blank" rel="nofollow" class="button">Visit {{ domain_name }}</a>
             </div>
 
 
